--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,10 +5,13 @@
     <title>Microlandia Compendium</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Fun, playful fonts for a Pokédex-like vibe -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;900&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <app-root></app-root>
   </body>
   </html>
-
